# pgsqlmgr

./: .gitignore  .pgsqlmgr  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml  setup_arm64.sh
docs/: TROUBLESHOOTING.md  design
simple-fix/: README  setup_arm64_homebrew.sh
src/pgsqlmgr/: __init__.py  __main__.py  cloud.py  config.py  db.py  listing.py  main.py  ssh.py  sync.py
tests/: __init__.py  test_config.py  test_config.yaml  test_db.py  test_integration.py  test_listing.py  test_ssh.py  test_sync.py
